aks-cluster-deploy/k8s/base/crs-webservice/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crs-webapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: crs-webapp
---
apiVersion: v1
kind: Service
metadata:
  name: crs-worker
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: crs-worker
---
apiVersion: v1
kind: Service
metadata:
  name: crs-analysis
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: crs-analysis
---
# New service for the submission node
apiVersion: v1
kind: Service
metadata:
  name: crs-sub
spec:
  ports:
    - name: http
      port: 80
      targetPort: http  # This will map to the named port "http" in your container
      protocol: TCP
  selector:
    app: crs-sub
